hover menu added

--- a/backup.html
+++ b/backup.html
@@ -45,13 +45,38 @@
                 </div>
             </div>
         </section>
+        <section>
+            <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+                <div class="container">
+                    <a class="navbar-brand" href="index.html">Enjoy <span>in Alanya</span></a>
+                    <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
+                        data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="fa fa-bars"></span> Menu
+                    </button>
+                    <div class="navbar-collapse collapse justify-content-end" id="ftco-nav" style="">
+                        <ul class="navbar-nav">
+                            <li class="nav-item active"><a href="#" class="nav-link">Home</a></li>
+                            <!--<li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown"
+                                    aria-haspopup="true" aria-expanded="false">Page</a>
+                                <div class="dropdown-menu" aria-labelledby="dropdown04">
+                                    <a class="dropdown-item" href="#">Page 1</a>
+                                    <a class="dropdown-item" href="#">Page 2</a>
+                                    <a class="dropdown-item" href="#">Page 3</a>
+                                    <a class="dropdown-item" href="#">Page 4</a>
+                                </div>
+                            </li>-->
+                            <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </section>
         <section id="header">
             <div class="d-flex justify-content-between">
-                <div class="logo">
-                    <h1>Enjoy in Alanya!</h1>
-                </div>
                 <div class="option-wrapper d-flex">
-
                     <div class="location">
                         <select name="Location" id="location">
                             <option selected="selected" value="Alanya">Alanya</option>
